worked on scrolling nav bar and added about section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>portfolio 2.0</title>
-  
+  <link href="https://fonts.googleapis.com/css?family=Noticia+Text|Patrick+Hand" rel="stylesheet">
+
+
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css'>
 
@@ -15,14 +17,12 @@
 
 <body>
 
-  <link href="https://fonts.googleapis.com/css?family=Noticia+Text|Patrick+Hand" rel="stylesheet">
-
-<nav class="topnav container-fluid" id="myTopnav">
+  <nav class="topnav container-fluid" id="myTopnav">
   <a href="#top" class="active" id="top">Top</a>
   <a href="#about" id="about">About</a>
   <a href="#projects" id="projects">Projects</a>
   <a href="#contact" id="contact">Contact</a>
-  <a href="javascript:void(0);" class="icon" id="barsIcon">
+  <a href="javascript:void(0);" class="icon" id="bars-icon">
     <div class="bars-container">
       <div class="bar1"></div>
       <div class="bar2"></div>
@@ -31,10 +31,21 @@
   </a>
 </nav>
 
-<section class="parallax"><br><br>
+<section class="parallax container-fluid" id="top-section"><br><br>
   <h1 class="title">something professional</h1>
   <h2 class="subtitle">something something something something something something something something</h2>
 </section>
+
+<section class="container-fluid pic-and-text" id="about-section">
+  <h1 class="title">about</h1>
+  <img src="https://i.imgur.com/PRFgck1.jpg" alt="placeholder portrait" class="about-pic">
+  <p class="about-text">something something something something something something something something something something something something something something something something something something something something something something something something something
+    something something something something something something something</p>
+</section>
+
+<section id="projects-section"></section>
+
+<section id="contact-section"></section>
   
   
 
