--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body>
 
   <nav class="topnav container-fluid" id="myTopnav">
-  <a href="#top" class="active" id="top">Top</a>
-  <a href="#about" id="about">About</a>
-  <a href="#projects" id="projects">Projects</a>
-  <a href="#contact" id="contact">Contact</a>
+  <a class="active" id="top">Top</a>
+  <a id="about">About</a>
+  <a id="projects">Projects</a>
+  <a id="contact">Contact</a>
   <a href="javascript:void(0);" class="icon" id="bars-icon">
     <div class="bars-container">
       <div class="bar1"></div>
@@ -35,6 +35,7 @@
   <h1 class="title">something professional</h1>
   <h2 class="subtitle">something something something something something something something something</h2>
 </section>
+<br>
 
 <section class="container-fluid pic-and-text" id="about-section">
   <h1 class="title">about</h1>
@@ -42,8 +43,17 @@
   <p class="about-text">something something something something something something something something something something something something something something something something something something something something something something something something something
     something something something something something something something</p>
 </section>
+<br>
 
-<section id="projects-section"></section>
+<section id="projects-section container-fluid text-center">
+  <h1 class="title">projects</h1>
+  <br>
+  <br>
+  <div>
+    <h2 class="subtitle">placeholder project title</h2>
+  </div>
+</section>
+<br>
 
 <section id="contact-section"></section>
   
