fixed white space in top area, added icons for projects

--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
   <meta charset="UTF-8">
   <title>portfolio 2.0</title>
   <link href="https://fonts.googleapis.com/css?family=Noticia+Text|Patrick+Hand" rel="stylesheet">
-
-
-  
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css'>
 
       <link rel="stylesheet" href="css/style.css">
-
-  
+ 
 </head>
 
 <body>
@@ -30,12 +27,13 @@
     </div>
   </a>
 </nav>
+<br>
 
-<section class="parallax container-fluid" id="top-section"><br><br>
+<section class="parallax container-fluid" id="top-section">
   <h1 class="title">something professional</h1>
   <h2 class="subtitle">something something something something something something something something</h2>
 </section>
-<br>
+
 
 <section class="container-fluid pic-and-text" id="about-section">
   <h1 class="title">about</h1>
@@ -43,19 +41,49 @@
   <p class="about-text">something something something something something something something something something something something something something something something something something something something something something something something something something
     something something something something something something something</p>
 </section>
-<br>
 
-<section id="projects-section container-fluid text-center">
+
+<section class="container-fluid text-center"id="projects-section">
   <h1 class="title">projects</h1>
-  <br>
-  <br>
-  <div>
-    <h2 class="subtitle">placeholder project title</h2>
+ 
+  <div id="first-project">
+    <h2 class="project-title">placeholder project title</h2>
+    <a href=null><img src="http://via.placeholder.com/900x500" alt="first project"></a>
+    <p class="dev-icons">
+        <i class="devicon-html5-plain-wordmark"></i>
+        <i class="devicon-css3-plain-wordmark"></i>
+        <i class="devicon-bootstrap-plain-wordmark"></i>
+        <i class="devicon-javascript-plain"></i>
+        <i class="devicon-jquery-plain-wordmark"></i></p>
+  </div>
+
+  <div id="second-project">
+    <h2 class="project-title">placeholder project title</h2>
+    <a href=null><img src="http://via.placeholder.com/900x500" alt="second project"></a>
+    <p class="dev-icons">
+        <i class="devicon-html5-plain-wordmark"></i>
+        <i class="devicon-css3-plain-wordmark"></i>
+        <i class="devicon-bootstrap-plain-wordmark"></i>
+        <i class="devicon-javascript-plain"></i>
+        <i class="devicon-jquery-plain-wordmark"></i></p>
+  </div>
+
+  <div id="third-project">
+    <h2 class="project-title">placeholder project title</h2>
+    <a href=null><img src="http://via.placeholder.com/900x500" alt="third project"></a>
+    <p class="dev-icons">
+      <i class="devicon-html5-plain-wordmark"></i>
+      <i class="devicon-css3-plain-wordmark"></i>
+      <i class="devicon-bootstrap-plain-wordmark"></i>
+      <i class="devicon-javascript-plain"></i>
+      <i class="devicon-jquery-plain-wordmark"></i></p>
   </div>
 </section>
-<br>
 
-<section id="contact-section"></section>
+
+<section class="container-fluid text-center" id="contact-section">
+  <h1 class="title">contact</h1>
+</section>
   
   
 
