completed contact section, reformatted projects section, actually fixed the margin at the top

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>portfolio 2.0</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Noticia+Text|Patrick+Hand" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css'>
-
-      <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
  
 </head>
 
@@ -43,55 +44,65 @@
 </section>
 
 
-<section class="container-fluid text-center"id="projects-section">
+<section class="container-fluid text-center projects-section-spacing"id="projects-section">
   <h1 class="title">projects</h1>
  
   <div id="first-project">
     <h2 class="project-title">placeholder project title</h2>
-    <a href=null><img src="http://via.placeholder.com/900x500" alt="first project"></a>
-    <p class="dev-icons">
-        <i class="devicon-html5-plain-wordmark"></i>
-        <i class="devicon-css3-plain-wordmark"></i>
-        <i class="devicon-bootstrap-plain-wordmark"></i>
-        <i class="devicon-javascript-plain"></i>
-        <i class="devicon-jquery-plain-wordmark"></i></p>
-  </div>
-
-  <div id="second-project">
-    <h2 class="project-title">placeholder project title</h2>
-    <a href=null><img src="http://via.placeholder.com/900x500" alt="second project"></a>
-    <p class="dev-icons">
-        <i class="devicon-html5-plain-wordmark"></i>
-        <i class="devicon-css3-plain-wordmark"></i>
-        <i class="devicon-bootstrap-plain-wordmark"></i>
-        <i class="devicon-javascript-plain"></i>
-        <i class="devicon-jquery-plain-wordmark"></i></p>
-  </div>
-
-  <div id="third-project">
-    <h2 class="project-title">placeholder project title</h2>
-    <a href=null><img src="http://via.placeholder.com/900x500" alt="third project"></a>
+    <p class="project-description">something something something</p>
     <p class="dev-icons">
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-css3-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark"></i>
       <i class="devicon-javascript-plain"></i>
       <i class="devicon-jquery-plain-wordmark"></i></p>
+    <a href=null><img src="http://via.placeholder.com/900x500" alt="first project"></a>
+  </div>
+
+  <div id="second-project">
+    <h2 class="project-title">placeholder project title</h2>
+    <p class="project-description">something something something</p>
+    <p class="dev-icons">
+      <i class="devicon-html5-plain-wordmark"></i>
+      <i class="devicon-css3-plain-wordmark"></i>
+      <i class="devicon-bootstrap-plain-wordmark"></i>
+      <i class="devicon-javascript-plain"></i>
+      <i class="devicon-jquery-plain-wordmark"></i></p>
+    <a href=null><img src="http://via.placeholder.com/900x500" alt="second project"></a>
+  </div>
+
+  <div id="third-project">
+    <h2 class="project-title">placeholder project title</h2>
+    <p class="project-description">something something something</p>
+    <p class="dev-icons">
+      <i class="devicon-html5-plain-wordmark"></i>
+      <i class="devicon-css3-plain-wordmark"></i>
+      <i class="devicon-bootstrap-plain-wordmark"></i>
+      <i class="devicon-javascript-plain"></i>
+      <i class="devicon-jquery-plain-wordmark"></i></p>
+    <a href=null><img src="http://via.placeholder.com/900x500" alt="third project"></a>
   </div>
 </section>
 
 
-<section class="container-fluid text-center" id="contact-section">
+<section class="container-fluid text-center parallax-contacts" id="contact-section">
   <h1 class="title">contact</h1>
+  <p class="contact-text">Thanks for looking through my page!<br>
+     You can check out more of my work or contact me through the links below.
+    </p>
+  <div class="contact-spacing contact-icons-spacing">
+    <a href="https://www.linkedin.com/in/alvin-kwong-8b33ab47/" target="_blank" ><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+    <a href="https://www.freecodecamp.org/akwong372" target="_blank"><i class="fa fa-free-code-camp" aria-hidden="true"></i></a>
+    <a href="https://github.com/akwong372" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+    <a href="https://codepen.io/niceboat111/" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i></a>
+  </div>
 </section>
   
-  
+<footer class="footer-style">
+<p>Created by <a href="https://github.com/akwong372" target="_blank">Alvin Kwong</a> © 2018</p>
+</footer>
 
     <script  src="js/index.js"></script>
-
-
-
-
 </body>
 
 </html>
