formatted top section, filled in about section, added links to projects

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 
   <nav class="topnav container-fluid" id="myTopnav">
-  <a class="active" id="top">Top</a>
-  <a id="about">About</a>
-  <a id="projects">Projects</a>
-  <a id="contact">Contact</a>
+  <a class="active" id="top">top</a>
+  <a id="about">about</a>
+  <a id="projects">projects</a>
+  <a id="contact">contact</a>
   <a href="javascript:void(0);" class="icon" id="bars-icon">
     <div class="bars-container">
       <div class="bar1"></div>
@@ -31,16 +31,17 @@
 <br>
 
 <section class="parallax container-fluid" id="top-section">
-  <h1 class="title">something professional</h1>
-  <h2 class="subtitle">something something something something something something something something</h2>
+  <h1 class="title top-text-title">hi.</h1>
+  <h2 class="subtitle">i'm alvin<br>
+  and i'm a front-end<br>
+   web developer.</h2>
+  <h3 class="sub-subtitle">(no chipmunk jokes, please)</h3>
 </section>
 
 
 <section class="container-fluid pic-and-text" id="about-section">
   <h1 class="title">about</h1>
-  <img src="https://i.imgur.com/PRFgck1.jpg" alt="placeholder portrait" class="about-pic">
-  <p class="about-text">something something something something something something something something something something something something something something something something something something something something something something something something something
-    something something something something something something something</p>
+  <p class="about-text">I'm a self-taught web developer from San Francisco, California.<br> I have a passion for learning and expanding my coding and design skills.<br> When I'm not working or studying, I'm probably looking up nonsense on the internet.</p>
 </section>
 
 
@@ -48,39 +49,46 @@
   <h1 class="title">projects</h1>
  
   <div id="first-project">
-    <h2 class="project-title">placeholder project title</h2>
-    <p class="project-description">something something something</p>
+    <h2 class="project-title">A Simon Game Clone</h2>
+    <p class="project-description">A memory game based on the Simon toy. 
+      The player matches color/sound cues in sequence until 20 moves are reached.<br>
+      Also includes a "strict" mode where the total moves counter is reset to 0 when a single mistake is made.<br>
+      Written mostly in Javascript and without jQuery as a way to improve my ability with vanilla Javascript.</p>
     <p class="dev-icons">
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-css3-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark"></i>
       <i class="devicon-javascript-plain"></i>
-      <i class="devicon-jquery-plain-wordmark"></i></p>
-    <a href=null><img src="http://via.placeholder.com/900x500" alt="first project"></a>
+    <a href="https://codepen.io/niceboat111/full/BxjPMy/" class="project-image" target="_blank"><img src="https://i.imgur.com/KrH4bgU.png" alt="first project"></a>
   </div>
 
   <div id="second-project">
-    <h2 class="project-title">placeholder project title</h2>
-    <p class="project-description">something something something</p>
+    <h2 class="project-title">A Twitch Stream Status Viewer</h2>
+    <p class="project-description">This is a simple app for keeping track of a preset list of channels from the Twitch website.<br>
+      Online channels will display their status message while offline channels will display "offline".<br>
+      Users can toggle between seeing only online channels, offline channels, or both.<br>
+      The status and portrait for each channel are accessed through a modified link to Twitch's API using jQuery's AJAX calls.</p>
     <p class="dev-icons">
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-css3-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark"></i>
       <i class="devicon-javascript-plain"></i>
       <i class="devicon-jquery-plain-wordmark"></i></p>
-    <a href=null><img src="http://via.placeholder.com/900x500" alt="second project"></a>
+    <a href="https://codepen.io/niceboat111/full/MGWYKg/" class="project-image"><img src="https://i.imgur.com/QZPxk0u.png" alt="second project"></a>
   </div>
 
   <div id="third-project">
-    <h2 class="project-title">placeholder project title</h2>
-    <p class="project-description">something something something</p>
+    <h2 class="project-title">A Pomodoro Timer</h2>
+    <p class="project-description">A timer to be used with the <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank" class="pomodoro-link">Pomodoro Technique</a>.<br>
+      It has a "work" timer and a "break" timer and both can be adjusted in 1 minute increments.<br>
+      An alert sound is played when the "work" timer runs out, and once again when the "break" timer runs out.</p>
     <p class="dev-icons">
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-css3-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark"></i>
       <i class="devicon-javascript-plain"></i>
       <i class="devicon-jquery-plain-wordmark"></i></p>
-    <a href=null><img src="http://via.placeholder.com/900x500" alt="third project"></a>
+    <a href="https://codepen.io/niceboat111/full/pLbNwN/" class="project-image"><img src="https://i.imgur.com/giQtdYN.png" alt="third project"></a>
   </div>
 </section>
 
